# jxl-ui

./: .gitignore  Cargo.toml  LICENSE  README.md  publish.sh
.github/workflows/: build.yml
assets/: AppIcon.icns
src/: lib.rs  main.rs
src/decoder/: mod.rs  rgb_conversion.rs  worker.rs
src/ui/: about_window.rs  image_tab.rs  mod.rs  tab_bar.rs
src/util/: mod.rs  rgb_conversion.rs
