[package]
name = "jxl-ui"
version = "0.1.0"
edition = "2021"
description = "A native JPEG XL image viewer built with GPUI"
authors = ["Harald Januschka"]
license = "BSD-3-Clause"
repository = "https://github.com/hjanuschka/jxl-ui"
keywords = ["jpeg-xl", "jxl", "image-viewer", "gpui"]
categories = ["multimedia::images", "gui"]

[[bin]]
name = "jxl-ui"
path = "src/main.rs"

[dependencies]
# JXL decoding from jxl-rs
jxl = { git = "https://github.com/libjxl/jxl-rs.git", branch = "main" }

# GPUI and UI
gpui = "0.2"
rfd = "0.14"

# Async & utilities
smol = "2.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["blocking"] }
tempfile = "3.0"

# Image processing
image = "0.25"

# Data structures
parking_lot = "0.12"
smallvec = "1.13"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
