[package]
name = "jxl-ui"
version = "0.1.0"
edition = "2021"
description = "A cross-platform JPEG XL image viewer built with egui"
authors = ["Harald Januschka"]
license = "BSD-3-Clause"
repository = "https://github.com/hjanuschka/jxl-ui"
keywords = ["jpeg-xl", "jxl", "image-viewer", "egui"]
categories = ["multimedia::images", "gui"]

[[bin]]
name = "jxl-ui"
path = "src/main.rs"

[dependencies]
# JXL decoding
jxl = { git = "https://github.com/hjanuschka/jxl-rs.git", branch = "flush-pixels-impl" }

# egui GUI framework (cross-platform)
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# File picker
rfd = "0.15"

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# Image processing
image = "0.25"

# HTTP for URL loading
reqwest = { version = "0.12", features = ["blocking"] }

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
